fix(ui): header shifts

--- a/seanime-web/src/app/globals.css
+++ b/seanime-web/src/app/globals.css
@@ -231,10 +231,19 @@ h6 {
     display: none !important;
 }
 
-body[data-scroll-locked] {
-    --removed-body-scroll-bar-size: 0 !important;
-    margin-right: 0 !important;
-    overflow-y: auto !important;
+/*body[data-scroll-locked] {*/
+/*    --removed-body-scroll-bar-size: 0 !important;*/
+/*    margin-right: 0 !important;*/
+/*    overflow-y: auto !important;*/
+/*}*/
+
+body[data-scroll-locked] .scroll-locked-offset {
+    padding-right: 10px;
+}
+
+
+body[data-scroll-locked] .media-page-header-scroll-locked {
+    /*right: 10px;*/
 }
 
 
